--- a/angular/angular.json
+++ b/angular/angular.json
@@ -87,8 +87,9 @@
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
             "assets": [
-              "src/favicon.ico",
-              "src/assets"
+              "src/assets/favicon.png",
+              "src/assets",
+              "assets/favicon.png"
             ],
             "styles": [
               "src/styles.css"
@@ -98,5 +99,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
